ingress-issuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - jsosa.duckdns.org
      secretName: jsosa-duckdns-tls
  rules:
    - host: jsosa.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: sample-page-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
